[gd_scene load_steps=14 format=3 uid="uid://bet5nv6x57yte"]

[ext_resource type="Script" path="res://Scripts/ship.gd" id="1_6p251"]
[ext_resource type="Texture2D" uid="uid://b8l4014iu4wxw" path="res://Graphics/spaceshipDef.png" id="1_x086b"]
[ext_resource type="Shader" path="res://Shaders/ship.gdshader" id="2_a28pc"]
[ext_resource type="Texture2D" uid="uid://ft57h8iejqu7" path="res://Graphics/spaceshipDead.png" id="4_8dwu7"]
[ext_resource type="Texture2D" uid="uid://e6snbkumhat4" path="res://Graphics/spaceshipDef_n.png" id="4_tlogw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gpvll"]
shader = ExtResource("2_a28pc")
shader_parameter/flash_color = Color(1, 1, 1, 0)
shader_parameter/flash_value = 0.0

[sub_resource type="CanvasTexture" id="CanvasTexture_vwc41"]
diffuse_texture = ExtResource("1_x086b")
normal_texture = ExtResource("4_tlogw")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fl1vn"]
bg_color = Color(0.164086, 9.7537e-05, 0.216437, 1)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qrwc5"]
bg_color = Color(0.121569, 0.74902, 0.415686, 1)
corner_radius_top_left = 7
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 7

[sub_resource type="Animation" id="Animation_enwba"]
resource_name = "flash"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_god1q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uakex"]
_data = {
"RESET": SubResource("Animation_god1q"),
"flash": SubResource("Animation_enwba")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_45y8s"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_6p251")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_gpvll")
texture = SubResource("CanvasTexture_vwc41")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -8, 8, 6, -8, 6)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
modulate = Color(0.46175, 1, 0.527764, 1)
self_modulate = Color(0.46175, 1, 0.527764, 1)
polygon = PackedVector2Array(0, -6, 6, 5, -6, 5)

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2(0.3, 0.1)

[node name="Healthbar" type="ProgressBar" parent="Node2D"]
offset_left = -30.0
offset_top = 90.0
offset_right = 32.0
offset_bottom = 117.0
theme_override_styles/background = SubResource("StyleBoxFlat_fl1vn")
theme_override_styles/fill = SubResource("StyleBoxFlat_qrwc5")
value = 50.0
show_percentage = false

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uakex")
}

[node name="InvTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DeathParticle" type="GPUParticles2D" parent="."]
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_45y8s")
texture = ExtResource("4_8dwu7")
one_shot = true

[connection signal="timeout" from="InvTimer" to="." method="_on_inv_timer_timeout"]
